Tabbing through textfields should repaint instead of leaving them looking selected.  Bug 214115, r=brade, sr=dbaron